<!--
  ~ 版权所有 (c) 华为技术有限公司 2022-2023
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2022-2023. All rights reserved.
  ~
  -->

<resources>
    <string name="app_name">云手机测评</string>
    <string name="ceping">云平台测评</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="yunshouji">云手机</string>
    <string name="yunyouxi">云游戏</string>
    <string name="main_zhuye">主页</string>
    <string name="main_tishi">提示</string>
    <string name="main_setting">设置</string>
    <string name="kunpeng_phone">鲲鹏云手机</string>
    <string name="huawei_instrument_phone">华为指令流</string>
    <string name="huawei_data_phone">华为视频流</string>
    <string name="redfingure_phone">红手指云手机</string>
    <string name="yidongphone">移动云手机</string>
    <string name="wangyiyunphone">网易云手机</string>
    <string name="base_xinneng">基础体验性能:</string>
    <string name="base_guige">本地手机基本规格:</string>
    <string name="select_phone">选择测评云手机</string>
    <string name="liuchangxing">流畅性</string>
    <string name="wendingxing">稳定性</string>
    <string name="chukongtiyan">触控体验</string>
    <string name="yinhuazhiliang">音画质量</string>
    <string name="cpu">cpu</string>
    <string name="gpu">gpu</string>
    <string name="ram">内存</string>
    <string name="rom">硬盘</string>
    <string name="starttest">开始测试</string>
    <string name="tengxunxianfeng">腾讯先锋</string>
    <string name="migukuaiyou">咪咕快游</string>
    <string name="wangyiyunyouxi">网易云游戏</string>
    <string name="select_game_plat">选择云游戏平台</string>
    <string name="shiyongshuoming">使用说明</string>
    <string name="yinsizhengce">隐私政策</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="setting_text_app_update">软件更新</string>
    <string name="cepingxinix">测评中. . .</string>
    <string name="jindu">100</string>
    <string name="tingzhiceshi">停止测试</string>
    <string name="yunshoujipingtai">云手机平台</string>
    <string name="percetn">%</string>
    <string name="now_ceping">已完成测评该信息</string>
    <string name="xiangxixinxi">通过多个不同分辨率的视频，测试出平均帧率，帧抖动率，Jank等参数评估流畅性性能</string>
    <string name="cepingfenshu">98</string>
    <string name="jutizhibiao">具体指标测试结果</string>
    <string name="_100">/100分</string>
    <string name="fanhuizongcepingjiegu">返回总测评结果</string>
    <string name="nextzhibia">查看下一指标</string>
    <string name="pungjunzhenlv">平均帧率(fps)</string>
    <string name="fangcha">抖动帧率(方差)</string>
    <string name="zhenjiange">帧间隔(ms)</string>
    <string name="kadunshichangzhanbi">卡顿时长占比(%)</string>
    <string name="qidongchengglv">启动成功率(%)</string>
    <string name="quanxuan">全选</string>
    <string name="accessibility_service_label">无障碍五福</string>
    <string name="quanxian">云平台测评想要访问您的手机权限:</string>
    <string name="qingqiu">需要您的同意，才能完成测评,请点击下方文字</string>
    <string name="gouxuanquanxian">打开权限，勾选成功则代表权限打开成功</string>
    <string name="wuzhangai">无障碍权限</string>

    <string name="pkg_name_red_finger_game">com.redfinger.app</string>
    <string name="pkg_name_huawei_cloud_game">com.huawei.cloudphonedaily</string>
<!--    <string name="pkg_name_huawei_cloud_game">com.huawei.cloudphone</string>-->
    <string name="pkg_name_huawei_cloud_phone">com.huawei.instructionstream.appui</string>
    <string name="pkg_name_e_cloud_phone">com.chinamobile.cmss.saas.cloundphone</string>
    <string name="pkg_name_net_ease_cloud_phone">com.netease.android.cloudgame</string>
    <string name="pkg_name_tencent_gamer">com.tencent.gamereva</string>
    <string name="pkg_name_mi_gu_play">cn.emagsoftware.gamehall</string>
    <string name="pkg_name_mi_gu_play2">com.migu.miguplay</string>
    <string name="pkg_names_accessibility_service">com.redfinger.app, com.huawei.cloudphonedaily, com.chinamobile.cmss.saas.cloundphone, com.huawei.instructionstream.appui, com.netease.android.cloudgame, com.tencent.gamereva, cn.emagsoftware.gamehall, com.migu.miguplay</string>
    <string name="benchmark_stability_monitor_description">Benchmark稳定性测试</string>

    <string name="stability_info_description">通过后台持续启动、关闭云手机，分析启动成功率、启动时长、退出时长，测评稳定性性能</string>
    <string name="fluency_info_description">通过多个不同分辨率的视频，测试出平均帧率，帧抖动率，Jank等参数评估流畅性性能</string>
    <string name="touch_info_description">通过后台程序对屏幕进行点击灵敏度和触屏响应时延进行测试，评估触控体验</string>
    <string name="sound_frame_info_description">通过显示分辨率、音画同步差、画面质量PSNR、音频质量PESQ等指标对音画质量做出客观评价</string>
    <string name="cpu_info_description">通过后台对云手机数据信息的读取，测试出CPU型号及性能，得出测评结果</string>
    <string name="gpu_info_description">通过后台对云手机数据信息的读取，测试出GPU型号及性能，得出测评结果</string>
    <string name="ram_info_description">通过读写速度，随机/顺序读写等方式，评价设备的RAM性能</string>
    <string name="rom_info_description">通过后台对云手机数据信息的读取，测试出硬盘大小及性能，得出测评结果</string>

    <string name="accessibility_description">Benchmark无障碍功能</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="isShowAgain">是否记住密码</string>
</resources>