<!--
  ~ 版权所有 (c) 华为技术有限公司 2022-2023
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2022-2023. All rights reserved.
  ~
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="TestNum"
            app:title="稳定性测试次数"
            app:useSimpleSummaryProvider="true"


            />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>