<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="#03A9F4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/jutizhibiao_fanhui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:padding="8dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/ceping_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jutizhibiao"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="match_parent">
    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
        <RelativeLayout

            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/juti_phone_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yunshoujipingtai"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/layout_jindu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/juti_phone_name"
                android:gravity="center">

                <TextView
                    android:id="@+id/juti_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cepingfenshu"
                    android:textColor="#FD4343"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/zong_ceping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/juti_grade"
                    android:layout_toEndOf="@+id/juti_grade"
                    android:text="@string/_100"
                    android:textColor="#FD4343"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/juti_ceping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_jindu"
                android:gravity="center"
                android:text="@string/now_ceping"
                android:textColor="@color/black" />
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/black"
            />

    </LinearLayout>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/ceping_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/juti_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_liuchang" />

        <TextView
            android:id="@+id/juti_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/juti_image"
            android:paddingStart="30dp"
            android:text="@string/liuchangxing"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
    <TextView
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/juti_text"
        android:layout_width="match_parent"
        android:text="@string/xiangxixinxi"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_marginTop="10dp"
        android:id="@+id/juti_fram"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:gravity="center_vertical"
        >
        <Button
            android:id="@+id/juti_back_ceping"
            android:text="@string/fanhuizongcepingjiegu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_bac"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/juti_next_ceping"
            android:text="@string/nextzhibia"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_bac"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>