<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/select_game_plat"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:id="@+id/select_game"
                android:background="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/tengxun_game"
                    android:drawableTop="@drawable/tengxunxianfeng"
                    android:layout_width="0dp"
                    android:text="@string/tengxunxianfeng"
                    android:textSize="12sp"
                    android:button="@null"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/migu_game"
                    android:drawableTop="@drawable/migukuaiyou"
                    android:layout_width="0dp"
                    android:text="@string/migukuaiyou"
                    android:button="@null"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/wangyi_game"
                    android:drawableTop="@drawable/wangyiyunyouxi"
                    android:layout_width="0dp"
                    android:text="@string/wangyiyunyouxi"
                    android:button="@null"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:text="@string/base_xinneng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/game_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingEnd="10dp"
                android:checked="true"
                android:text="@string/quanxuan" />
        </RelativeLayout>

        <LinearLayout
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/red_liuchangxing"
                    android:drawableTop="@drawable/blue_liuchang"
                    android:text="@string/liuchangxing"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />

                <Button
                    android:id="@+id/red_wendinxing"
                    android:drawableTop="@drawable/red_wending"
                    android:text="@string/wendingxing"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
                <Button
                    android:id="@+id/red_chukong"
                    android:drawableTop="@drawable/red_chukong"
                    android:text="@string/chukongtiyan"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
                <Button
                    android:id="@+id/red_yinhua"
                    android:drawableTop="@drawable/red_yinhua"
                    android:text="@string/yinhuazhiliang"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <CheckBox
                        android:checked="true"
                        android:clickable="false"
                        android:id="@+id/red_liuchang_cheak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_wending_cheak"
                        android:checked="true"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_chukong_cheak"
                        android:checked="true"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_yinhua_cheak"
                        android:checked="true"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/base_guige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/red_cpu"
                    android:drawableTop="@drawable/red_cpu"
                    android:text="@string/cpu"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />

                <Button
                    android:id="@+id/red_gpu"
                    android:drawableTop="@drawable/red_gpu"
                    android:text="@string/gpu"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
                <Button
                    android:id="@+id/red_ram"
                    android:drawableTop="@drawable/red_ram"
                    android:text="@string/ram"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
                <Button
                    android:id="@+id/red_rom"
                    android:drawableTop="@drawable/red_rom"
                    android:text="@string/rom"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <CheckBox
                        android:clickable="false"
                        android:checked="true"
                        android:id="@+id/red_cpu_cheak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_gpu_cheak"
                        android:checked="true"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_ram_cheak"
                        android:checked="true"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <CheckBox
                        android:id="@+id/red_rom_cheak"
                        android:checked="true"
                        android:clickable="false"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="5dp"
            >
            <Button
                android:id="@+id/red_start_test"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/red_button_bac"
                android:text="@string/starttest"
                android:textSize="18sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>